fix : Dto 최적화